--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="/manifest.json" />
-    <title>SwissRoute – טיול שווייץ 2025</title>
+    <title>SwissRoute – טיול לשווייץ 2025</title>
   </head>
   <body>
     <div id="root"></div>
+
     <script type="module" src="/src/main.jsx"></script>
+
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .then(() => console.log("✅ Service Worker Registered"))
+          .catch((err) => console.log("❌ SW registration failed:", err));
+      }
+    </script>
   </body>
 </html>
