--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker
-        .register("service-worker.js") <!-- בלי סלאש -->
+        .register("/SwissRouteApp/service-worker.js") <!-- בלי סלאש -->
         .then(() => console.log("✅ Service Worker Registered"))
         .catch((err) => console.log("❌ SW registration failed:", err));
     }
