--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="he" dir="rtl">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/SwissRouteApp/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/SwissRouteApp/manifest.json" />
     <title>SwissRoute – טיול לשווייץ 2025</title>
   </head>
   <body>
     <div id="root"></div>
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/SwissRouteApp/src/main.jsx"></script>
 
   <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker
-        .register("/SwissRouteApp/service-worker.js") <!-- בלי סלאש -->
+        .register("/SwissRouteApp/service-worker.js")
         .then(() => console.log("✅ Service Worker Registered"))
         .catch((err) => console.log("❌ SW registration failed:", err));
     }
